@@ -89,6 +89,19 @@ Info: The package installs an <tt>/etc/init.d</tt> script which is
  unless you omit the links intentionally for some reason or create the
  links some other way.
 
+Tag: upstart-job-in-etc-init.d-not-registered-via-update-rc.d
+Severity: normal
+Certainty: possible
+Info: The package installs an upstart-job in <tt>/etc/init.d</tt>
+ which is not registered in the <tt>postinst</tt> script. On
+ non-upstart systems this is usually a bug, unless you omit the links
+ intentionally for some reason or create the links some other way.
+ .
+ This tag should only be emitted for vendors that do not use upstart
+ by default (such as Debian).  If this tag is emitted by a vendor
+ using upstart (e.g. Ubuntu), it may be a misconfiguration of their
+ Lintian vendor profile.
+
 Tag: init.d-script-has-duplicate-lsb-section
 Severity: important
 Certainty: certain
