@@ -1,4 +1,5 @@
 # The default profile for Ubuntu and derivatives thereof.
 Profile: ubuntu/main
 Extends: debian/main
-Disable-Tag: debian-changelog-file-is-a-symlink
+Disable-Tag: debian-changelog-file-is-a-symlink,
+ upstart-job-in-etc-init.d-not-registered-via-update-rc.d
